--- a/index.html
+++ b/index.html
@@ -76,10 +76,13 @@
                   <div class="plus plus_fig"></div>
                   <div class="minus minus_fig"></div>
                 </div>
-                <div class="input">
-                  <div class="line_input"></div>
-                  <div class="round"></div>
-                </div>
+                <div class="round round_1"></div>
+                <div class="round round_2"></div>
+                <div class="round round_2"></div>
+                <div class="round round_3"></div>
+                <div class="round round_4"></div>
+                <div class="round round_5"></div>
+                <div class="round round_6"></div>
                 <div class="lines"></div>
                 <div class="start">
                   <p class="start_stop_text">Запуск</p>
