--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
     <link rel="icon" type="image/png" href="images/singular_3.png"/>
     <link rel="stylesheet" href="stylesheet/style.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <script type="text/javascript" src="http://code.jquery.com/jquery-latest.min.js"></script>
     <title>Hole</title>
     <script src="dynamic.js"></script>
     <script src="test.js"></script>
@@ -82,17 +81,17 @@
                 <div class="button-effects button-effects_4"></div>
                 <div class="button-effects button-effects_5"></div>
                 <div class="button-effects button-effects_6"></div>
-                <div class="timer_block">
-                  <p class="seconds">0:10</p>
+                <div id="counter_1" class="timer_block">
+                  <p id="buttonCountNumber_1" class="seconds">1</p>
                   <div class="line_velvet"></div>
-                  <div class="plus plus_sec"></div>
-                  <div class="minus minus_sec"></div>
+                  <div id="buttonCountPlus_1" value="+" class="plus plus_sec"></div>
+                  <div id="buttonCountMinus_1" value="-" class="minus minus_sec"></div>
                 </div>
-                <div class="size_block">
-                  <p class="figures">5</p>
+                <div id="counter_2" class="size_block">
+                  <p id="buttonCountNumber_2" class="figures">5</p>
                   <div class="line_velvet"></div>
-                  <div class="plus plus_fig"></div>
-                  <div class="minus minus_fig"></div>
+                  <div id="buttonCountPlus_2" value="+" class="plus plus_fig"></div>
+                  <div id="buttonCountMinus_2" value="-" class="minus minus_fig"></div>
                 </div>
                 <div class="round round_1"></div>
                 <div class="round round_2"></div>
