--- a/index.html
+++ b/index.html
@@ -46,13 +46,13 @@
             </section><!----><section class="first_page_right">
               <div class="fourth_block block">
                 <ul id="slides">
-                  <li class="slide showing robot_phrase">Привет!<br>Я – искусственный интеллект компании Hole</li>
-                  <li class="slide robot_phrase">На этом сайте вы можете попробовать закрыть чёрную дыру, используя различные эффекты</li>
-                  <li class="slide robot_phrase">Надеюсь, вам понравится наш космический симулятор и вы посетите выставку Hole</li>
+                  <li class="slide slide_1 showing robot_phrase">Привет!<br>Я – искусственный интеллект компании Hole</li>
+                  <li class="slide slide_2 robot_phrase">На этом сайте вы можете попробовать закрыть чёрную дыру, используя различные эффекты</li>
+                  <li class="slide slide_3 robot_phrase">Надеюсь, вам понравится наш космический симулятор и вы посетите выставку Hole</li>
                 </ul>
                 <!--<p class="robot_phrase">Привет!<br>Я – искусственный интеллект компании Hole</p>-->
-                <a href=""><div class="arrow_left" onclick="previousSlide()" id="previous"></div></a>
-                <a href=""><div class="arrow_right" onclick="nextSlide()" id="next"></div></a>
+                <div class="arrow_left" id="previous"></div>
+                <div class="arrow_right" id="next"></div>
               </div><!----><div class="fifth_block block">
                 <div class="robot">
                   <div class="robot_body"></div>
@@ -62,8 +62,8 @@
             </section>
             <section class="third_section">
               <h3 class="choose_hole_phrase">Выберите дыру, которую будете закрывать</h3>
-              <a class="prev" onclick="minusSlide()"><div class="union_left"></div></a>
-              <a class="next" onclick="plusSlide()"><div class="union_right"></div></a>
+              <a class="prev"><div class="union_left"></div></a>
+              <a class="next"><div class="union_right"></div></a>
               <div class="hole_1 hole"></div>
               <div class="hole_2 hole"></div>
               <div class="hole_3 hole"></div>
